--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -19,6 +19,13 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /tna/api/
+            pathType: Prefix
+            backend:
+              service:
+                name: ciim-service
+                port:
+                  name: api-port
           - path: /api/v1/
             pathType: Prefix
             backend:
