--- a/kubernetes/eks/ebs-storageclass.yml
+++ b/kubernetes/eks/ebs-storageclass.yml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: ebs.csi.aws.com
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
 reclaimPolicy: Retain
