--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -44,8 +44,8 @@ rosetta:
         type: elasticsearch
         domainConverter: es-converter
         properties:
-          host: host.docker.internal
-          port: 9400
+          host: ciim-public-es-http.etna
+          port: 9200
           index: ciim
           username: elastic
           password: 6tVhH4oGK23TU895Pfa04B8K
