--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -38,4 +38,11 @@ spec:
               service:
                 name: rosetta-service
                 port:
+                  name: rosetta-port+
+          - path: /swagger-ui/(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
                   name: rosetta-port
