swagger unable to get ui files

--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -38,7 +38,7 @@ spec:
               service:
                 name: rosetta-service
                 port:
-                  name: rosetta-port+
+                  name: rosetta-port
           - path: /swagger-ui/(.*)
             pathType: Prefix
             backend:
