ciim staging mem test

--- a/kubernetes/overlays/staging/ciim-tagged.yml
+++ b/kubernetes/overlays/staging/ciim-tagged.yml
@@ -9,3 +9,6 @@ spec:
       containers:
         - name: ciim
           image: public.ecr.aws/v3w7q3a1/tna-ciim:latest
+          resources:
+            requests:
+              memory: 12Gi
