internal-es staging mem test

--- a/kubernetes/overlays/staging/internal-es-tagged.yml
+++ b/kubernetes/overlays/staging/internal-es-tagged.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: etna
 spec:
   nodeSets:
-    - name: default
+    - count: 1
       podTemplate:
         spec:
           containers:
