Added public es rosetta and ciim ui to staging

--- a/kubernetes/ciim-ui/properties/application.yml
+++ b/kubernetes/ciim-ui/properties/application.yml
@@ -7,7 +7,7 @@ es:
       active: true
       cluster: ciim-internal
       node: ciim-internal-client
-      host: ciim-public-es-http.etna
+      host: ciim-internal-es-http.etna
       port: 9200
       pingTimeout: 10s
       protocol: http
