--- a/kubernetes/ciim-ui/ciim-ui.yml
+++ b/kubernetes/ciim-ui/ciim-ui.yml
@@ -24,7 +24,7 @@ spec:
             name: ciim-config
       containers:
         - name: ui
-          image: public.ecr.aws/v3w7q3a1/tna-ciim:1.1.0
+          image: public.ecr.aws/v3w7q3a1/ciim-management:7.0.7
           imagePullPolicy: Always
           ports:
             - name: ui-port
