--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -3,9 +3,13 @@ bases:
   - ../../ciim
   - ../../eks
   - ../../unmanaged-internal-es
+  - ../../unmanaged-public-es
+  - ../../rosetta
+  - ../../ciim-ui
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
   - ciim-tagged.yml
   - internal-es-tagged.yml
   - database-tagged.yml
+  - public-es-tagged.yml
