--- a/kubernetes/overlays/staging/public-es-tagged.yml
+++ b/kubernetes/overlays/staging/public-es-tagged.yml
@@ -1,7 +1,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  name: ciim-internal
+  name: ciim-public
   namespace: etna
 spec:
   nodeSets:
