Updated rosetta and ui config

--- a/kubernetes/ciim-ui/properties/application.yml
+++ b/kubernetes/ciim-ui/properties/application.yml
@@ -13,7 +13,7 @@ es:
       protocol: http
       pathPrefix:
       username: elastic
-      password: password
+      password: jh82P2Z38Om3jV5DJvk193NQ
       mediaBase: http://localhost/mediaLib
       indices:
         - ciim
