--- a/kubernetes/overlays/staging/ciim-tagged.yml
+++ b/kubernetes/overlays/staging/ciim-tagged.yml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: ciim
-          image: public.ecr.aws/v3w7q3a1/tna-ciim:latest
+          image: public.ecr.aws/v3w7q3a1/tna-ciim:staging
           env:
             - name: JAVA_OPTS
               value: "-Xms16g -Xmx16g"
