--- a/kubernetes/rosetta-staging/ingress.yml
+++ b/kubernetes/rosetta-staging/ingress.yml
@@ -46,3 +46,10 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /ciim/
+            pathType: Prefix
+            backend:
+              service:
+                name: ui-service
+                port:
+                  name: ui-port
