--- a/kubernetes/rosetta-staging/config/application.yml
+++ b/kubernetes/rosetta-staging/config/application.yml
@@ -27,12 +27,19 @@ rosetta:
   cache:
     enabled: false
     use_cache_service: false
+  profile:
+    profiles:
+      - name: default
+        glyphs:
+          policy: list
+          names:
+            - api-default
   transform:
     enabled: true
     timeout_millis: 6000
     glyphs:
-      - name: jpt
-        type: jpt
+      - name: api-default
+        type: proteus
         properties:
           mutable: true
           file: ./config/jpt.json
