--- a/kubernetes/rosetta-staging/ingress.yml
+++ b/kubernetes/rosetta-staging/ingress.yml
@@ -46,6 +46,13 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /spec
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
           - path: /ciim/
             pathType: Prefix
             backend:
