--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -39,6 +39,13 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /spec
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
           - path: /swagger-ui/index.html/(.*)
             pathType: Prefix
             backend:
