--- a/kubernetes/rosetta-staging/ingress.yml
+++ b/kubernetes/rosetta-staging/ingress.yml
@@ -46,7 +46,7 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
-          - path: /api/v1/data/spec
+          - path: /api/v1/spec
             pathType: Prefix
             backend:
               service:
