--- a/kubernetes/rosetta-staging/config/application.yml
+++ b/kubernetes/rosetta-staging/config/application.yml
@@ -96,7 +96,7 @@ rosetta:
           path_config:
             paths:
               topic: "topic.summary.title.keyword"
-              collection: "@hierarch.identifier.__reference_number"
+              collection: "collection.identifier.value"
               group: "@datatype.group.value"
               level: "level.value"
               type: "repository.@datatype.actual"
