Added new config for batch size and thread size

--- a/kubernetes/ciim-staging/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_transient.properties
@@ -49,3 +49,5 @@ ssh.command.location=ssh
 media.gmagick.processes=1
 
 processing.thread.pool.size=40
+processing.doc.repro.batch.size=10000
+processing.doc.repro.threads=20
