Changed to dev build for dev env

--- a/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
@@ -7,12 +7,11 @@ processors.iadata.batchUpdate.s3.accessKey=test
 
 processors.iadata.batchUpdate.s3.secretAccessKey=test
 
-processors.iadata.batchUpdate.s3.roleArn=test
+processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::968803923593:role/ciim-update-write-role
 
-processors.iadata.batchUpdate.s3.bucket=test
+processors.iadata.batchUpdate.s3.bucket=arn:aws:s3:::ds-live-ciim-update
 
-
-processors.iadata.batchUpdate.s3.region=test
+processors.iadata.batchUpdate.s3.region=eu-west-2
 
 processors.iadata.batchUpdate.s3.prefix=test
 
