--- a/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
@@ -3,13 +3,13 @@ publication.endpoints.enabled=true
 enhancements.enabled=true
 
 
-processors.iadata.batchUpdate.s3.accessKey=test
+processors.iadata.batchUpdate.s3.accessKey=AKIARX7YI5KRFLNZNGWP
 
-processors.iadata.batchUpdate.s3.secretAccessKey=test
+processors.iadata.batchUpdate.s3.secretAccessKey=invFVzv3M0if0jfbBfICmAxH4epn9QUwn37DZBbE
 
-processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::968803923593:role/ciim-update-write-role
+processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::337670467269:role/IAM_Admin_Role
 
-processors.iadata.batchUpdate.s3.bucket=arn:aws:s3:::ds-live-ciim-update
+processors.iadata.batchUpdate.s3.bucket=arn:aws:s3:::ds-staging-ciim-update
 
 processors.iadata.batchUpdate.s3.region=eu-west-2
 
