--- a/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
@@ -9,11 +9,11 @@ processors.iadata.batchUpdate.s3.secretAccessKey=aW52RlZ6djNNMGlmMGpmYkJmSUNtQXh
 
 processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::337670467269:role/IAM_Admin_Role
 
-processors.iadata.batchUpdate.s3.bucket=ds-staging-ciim-update
+processors.iadata.batchUpdate.s3.bucket=arn:aws:s3:::ds-staging-ciim-update
 
 processors.iadata.batchUpdate.s3.region=eu-west-2
 
-processors.iadata.batchUpdate.s3.prefix=test
+processors.iadata.batchUpdate.s3.prefix=
 
 
 
