--- a/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
@@ -3,9 +3,9 @@ publication.endpoints.enabled=true
 enhancements.enabled=true
 
 
-processors.iadata.batchUpdate.s3.accessKey=QUtJQVJYN1lJNUtSRkxOWk5HV1A=
+processors.iadata.batchUpdate.s3.accessKey=AKIARX7YI5KRFLNZNGWP
 
-processors.iadata.batchUpdate.s3.secretAccessKey=aW52RlZ6djNNMGlmMGpmYkJmSUNtQXhINGVwbjlRVXduMzdEWkJiRQ==
+processors.iadata.batchUpdate.s3.secretAccessKey=invFVzv3M0if0jfbBfICmAxH4epn9QUwn37DZBbE
 
 processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::337670467269:role/IAM_Admin_Role
 
@@ -13,7 +13,7 @@ processors.iadata.batchUpdate.s3.bucket=ds-staging-ciim-update
 
 processors.iadata.batchUpdate.s3.region=eu-west-2
 
-processors.iadata.batchUpdate.s3.prefix=test
+processors.iadata.batchUpdate.s3.prefix=
 
 
 
