--- a/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_persisted.properties
@@ -3,7 +3,7 @@ publication.endpoints.enabled=true
 enhancements.enabled=true
 
 
-processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::337670467269:role/IAM_Admin_Role
+processors.iadata.batchUpdate.s3.roleArn=arn:aws:iam::337670467269:role/ciim-update-write-role
 
 processors.iadata.batchUpdate.s3.bucket=ds-staging-ciim-update
 
