--- a/kubernetes/rosetta/kustomization.yml
+++ b/kubernetes/rosetta/kustomization.yml
@@ -2,6 +2,7 @@ namespace: etna
 resources:
   - rosetta.yml
   - ingress.yml
+  - es_ingress.yml
 configMapGenerator:
   - name: rosetta-config
     files:
