--- a/kubernetes/rosetta/es_ingress.yml
+++ b/kubernetes/rosetta/es_ingress.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: etna
   annotations:
     konghq.com/strip-path: "true"
+    kubernetes.io/ingress.class: kong
 spec:
   rules:
     - http:
