Updated dev to use stagings rds instance

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -1,11 +1,11 @@
-ciim.db.url=jdbc:mysql://ciim-db-service.etna/ciim?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.db.url=jdbc:mysql://ciim-db-service.etna/ciim_dev?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 ciim.db.dialect=org.hibernate.dialect.MySQL8Dialect
 ciim.db.driver=com.mysql.cj.jdbc.Driver
 ciim.db.poolSize=25
 
 # CIIM VAULT DB PROPERTIES
 
-ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault_dev?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 
 ciim.vault.db.username=ciim
 
