--- a/kubernetes/rosetta/rosetta.yml
+++ b/kubernetes/rosetta/rosetta.yml
@@ -28,7 +28,7 @@ spec:
           imagePullPolicy: IfNotPresent
       containers:
         - name: rosetta
-          image: public.ecr.aws/v3w7q3a1/rosetta:tna
+          image: public.ecr.aws/v3w7q3a1/rosetta:tna-1.0.0
           imagePullPolicy: Always
           ports:
             - name: rosetta-port
