Testing rosetta code vs staging ES

--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -51,7 +51,7 @@ rosetta:
         type: elasticsearch
         domainConverter: es-converter
         properties:
-          host: aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com
+          host: http://aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com
           path_prefix: es
           port: 9200
           index: ciim-160322
