Testing rosetta code vs staging ES

--- a/kubernetes/rosetta/es-service.yml
+++ b/kubernetes/rosetta/es-service.yml
@@ -5,4 +5,4 @@ metadata:
   namespace: etna
 spec:
   type: ExternalName
-  externalName: aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com
+  externalName: aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com/es
