--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -51,11 +51,12 @@ rosetta:
         type: elasticsearch
         domainConverter: es-converter
         properties:
-          host: ciim-public-es-http.etna
+          host: aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com
+          path_prefix: es
           port: 9200
-          index: ciim
+          index: ciim-160322
           username: elastic
-          password: 6tVhH4oGK23TU895Pfa04B8K
+          password: JL9L29k6SyQz2h692gTn26Xd
           date_range_format: "{from} - {to}"
           date_aggregations:
             - path: "origination.date.from"
