--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -51,12 +51,11 @@ rosetta:
         type: elasticsearch
         domainConverter: es-converter
         properties:
-          host: aa83a1e6831944fa8bcf17f5ce391b73-58be9fd587cba13e.elb.eu-west-2.amazonaws.com
-          path_prefix: es
+          host: ciim-public-es-http.etna
           port: 9200
-          index: ciim-160322
+          index: ciim
           username: elastic
-          password: JL9L29k6SyQz2h692gTn26Xd
+          password: 6tVhH4oGK23TU895Pfa04B8K
           date_range_format: "{from} - {to}"
           date_aggregations:
             - path: "origination.date.from"
