added iiif to ingress

--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -53,3 +53,10 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /iiif/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
