added iiif to ingress

--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -134,4 +134,4 @@ rosetta:
       identifierQueryString: identifier.value
       manifestKey:
         keyType: IDENTIFIER
-        identifierType: accession number
+        identifierType: iaid
