--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -34,6 +34,13 @@ rosetta:
           policy: list
           names:
             - api-default
+      - name: iiif
+        providers:
+          policy: all
+        glyphs:
+          policy: list
+          names:
+            - iiif-mapping
   transform:
     enabled: true
     timeout_millis: 6000
@@ -43,6 +50,13 @@ rosetta:
         properties:
           mutable: true
           file: ./config/jpt.json
+          input: source
+          output: detail
+      - name:  iiif-mapping
+        type: proteus
+        properties:
+          mutable: true
+          file: ./config/iiif-mapping.json
           input: source
           output: detail
   provider:
