added rosetta v2 for iiif

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../../unmanaged-internal-es
   - ../../unmanaged-public-es
   - ../../rosetta
+  - ../../rosetta-iiif
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
