--- a/kubernetes/rosetta-iiif/config/application.yml
+++ b/kubernetes/rosetta-iiif/config/application.yml
@@ -13,11 +13,12 @@ rosetta:
       - name: elasticsearch
         type: elasticsearch
         properties:
-          host: ciim-public-es-http.etna
+          host: ciim-api.ukwest.cloudapp.azure.com
+          path_prefix: es
           port: 9200
           index: ciim
           username: elastic
-          password: 6tVhH4oGK23TU895Pfa04B8K
+          password: 3S91rLm5T
           global_timeout_millis: 1000000
           timeout_millis: 100000
 
