--- a/kubernetes/rosetta-iiif/config/application.yml
+++ b/kubernetes/rosetta-iiif/config/application.yml
@@ -33,6 +33,8 @@ rosetta:
           names:
             - api-default
       - name: iiif
+        providers:
+          policy: all
         glyphs:
           policy: list
           names:
