--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
   - ../../unmanaged-public-es
   - ../../rosetta
   - ../../rosetta-iiif
+  - ../../ciim-ui-dev
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
