--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -24,7 +24,7 @@ ciim.data.dir=/ciim
 elasticsearch.cluster=ciim-internal
 elasticsearch.client.host=ciim-internal-es-http.etna
 
-media.process.files=false
+media.process.files=true
 media.zoom.processing.enabled=false
 media.ciim.dir=/ciim/ciim-media
 media.processing.timeout=180000
