--- a/kubernetes/rosetta-iiif/kustomization.yml
+++ b/kubernetes/rosetta-iiif/kustomization.yml
@@ -7,3 +7,4 @@ configMapGenerator:
       - ./config/application.yml
       - ./config/jpt.json
       - ./config/iiif-mapping.json
+      - ./config/component_search.json
